# nitrogen-leaching-agent

./: .env.example  .gitignore  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/scripts/: index_papers.py  retrieval_debug.py  run_mini_eval.py
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: README.md  __init__.py  chat_service.py  prompt.py
backend/src/api/: README.md  __init__.py  chat.py  chat_schema.py  health.py
backend/src/llm/: README.md  __init__.py  base.py  deepseek.py
backend/src/rag/: README.md  __init__.py  base.py  bge.py  chunker.py  ingest.py  reranker.py  retriever.py
backend/src/simulator/: README.md
backend/src/storage/: README.md  __init__.py  chroma_store.py
backend/src/utils/: README.md  logging.py
backend/tests/: conftest.py  test_chat_live.py  test_chat_prompt.py  test_chat_route.py  test_chat_schema.py  test_chat_service.py  test_chroma_store.py  test_chunker.py  test_config.py  test_embedder.py  test_embedder_live.py  test_health.py  test_index_papers.py  test_index_pipeline.py  test_ingest.py  test_llm_base.py  test_llm_deepseek.py  test_logging.py  test_rag_live.py  test_reranker.py  test_retriever.py
data/eval/: README.md  mini_eval_20260507-164315_judged.yaml  mini_eval_20260512-113851_judged.yaml  mini_questions.yaml
data/papers/: README.md  sample.txt  (+1 more)
docs/: ARCHITECTURE.md  COMMIT_CONVENTION.md  development.md
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
scripts/: download_models.sh
(+35 files in other folders)
