[project]
name = "nitrogen-leaching-agent-backend"
version = "0.1.0"
description = "Backend for the farmland nitrogen leaching risk decision AI agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "XCXUFO", email = "1776359099@qq.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "openai>=1.50,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
