[project]
name = "nitrogen-leaching-agent-backend"
version = "0.1.0"
description = "Backend for the farmland nitrogen leaching risk decision AI agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "XCXUFO", email = "1776359099@qq.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "openai>=1.50,<2.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=3.0,<4.0",
    "chromadb>=0.5,<0.6",
    "pymupdf>=1.24,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "live: tests that hit live external services or load real local models (gated by env vars)",
]
